bug 47549 (Floaters cause entire page to redraw as content is appended (block paint perf)) r=kmcclusk@netscape.com sr=waterson@netscape.com