layout/html/base/src/nsTextFrame.cpp
@@ -4596,17 +4596,17 @@ nsTextFrame::Reflow(nsIPresContext* aPresContext,
   else {
     mState &= ~TEXT_OPTIMIZE_RESIZE;
   }
-
+ 
   // If it's an incremental reflow command, then invalidate our existing
   // bounds.
   // XXX We need a finer granularity than this, but it isn't clear what
   // has actually changed...
-  if (eReflowReason_Incremental == aReflowState.reason ||
-      eReflowReason_Dirty == aReflowState.reason) {
+  /*if (eReflowReason_Incremental == aReflowState.reason ||
+      eReflowReason_Dirty == aReflowState.reason) {*/
     maxFrameWidth  = PR_MAX(maxFrameWidth,  mRect.width);
     maxFrameHeight = PR_MAX(maxFrameHeight, mRect.height);
     Invalidate(aPresContext, nsRect(0,0,maxFrameWidth,maxFrameHeight));
-  }
+  /*}*/
 
 
 #ifdef NOISY_REFLOW
